--- a/index.html
+++ b/index.html
@@ -218,6 +218,16 @@
 <!-- container end here -->
 
 
+<div class="nonono">
+i test here the terminal of vs code and the cmd 
+
+
+
+</div>
+
+
+
+
 
 </body>
 </html>
